# Image-Guided-Robotic-Needle-Placement

./: README.md  ReadMe
camera_calibration/: CMakeLists.txt
camera_calibration/src/: CameraCalibrationNode.h
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/franka_control/: ErrorRecoveryAction.h  ErrorRecoveryActionFeedback.h  ErrorRecoveryActionGoal.h  ErrorRecoveryActionResult.h  ErrorRecoveryFeedback.h  ErrorRecoveryGoal.h  ErrorRecoveryResult.h  SetCartesianImpedance.h  SetCartesianImpedanceRequest.h  SetCartesianImpedanceResponse.h  SetEEFrame.h  SetEEFrameRequest.h  SetEEFrameResponse.h  SetForceTorqueCollisionBehavior.h  SetForceTorqueCollisionBehaviorRequest.h  SetForceTorqueCollisionBehaviorResponse.h  SetFullCollisionBehavior.h  SetFullCollisionBehaviorRequest.h  SetFullCollisionBehaviorResponse.h  SetJointImpedance.h  SetJointImpedanceRequest.h  SetJointImpedanceResponse.h  SetKFrame.h  SetKFrameRequest.h  SetKFrameResponse.h  SetLoad.h  SetLoadRequest.h  SetLoadResponse.h
devel/include/franka_example_controllers/: JointTorqueComparison.h  compliance_paramConfig.h  desired_mass_paramConfig.h
devel/include/franka_gripper/: GraspGoal.h  (+28 more)
src/Azure_Kinect_ROS_Driver-melodic/: README.md
src/basic_node_python/: CMakeLists.txt  README.txt
src/basic_node_python/launch/: basic_node.launch
src/basic_node_python/src/: basic_node.py  main.py
src/camera_calibration/: CMakeLists.txt  package.xml
src/direct_kinematics/: CMakeLists.txt  package.xml
src/forward_kinematics/: CMakeLists.txt
src/franka_ros/: README.md
src/inverse_kinematics/: CMakeLists.txt
src/master_sim/: CMakeLists.txt  package.xml
src/messages/: CMakeLists.txt  package.xml
src/panda_joint_reader/: CMakeLists.txt
src/pathPlanning_cc/: CMakeLists.txt  package.xml
src/pathplanning_model/: CMakeLists.txt  package.xml
src/pc_sim/: CMakeLists.txt  package.xml
src/point_cloud_generator/: CMakeLists.txt  package.xml
src/trajectory_model/: CMakeLists.txt  package.xml
src/trajectory_planning_cc/: CMakeLists.txt  package.xml
(+304 files in other folders)
